src/metrics/snapshots/big_code_analysis__metrics__npa__tests__typescript_parameter_properties.snap
---
source: src/metrics/npa.rs
expression: metric.npa
---
{
  "class_npa_sum": 1,
  "interface_npa_sum": 0,
  "class_attributes": 2,
  "interface_attributes": 0,
  "class_cda": 0.5,
  "interface_cda": 0.0,
  "total": 1,
  "total_attributes": 2,
  "cda": 0.5
}
