src/metrics/snapshots/big_code_analysis__metrics__npa__tests__typescript_readonly_constructor_param_property.snap
---
source: src/metrics/npa.rs
expression: metric.npa
---
{
  "classes": 2.0,
  "interfaces": 0.0,
  "class_attributes": 4.0,
  "interface_attributes": 0.0,
  "classes_average": 0.5,
  "interfaces_average": 0.0,
  "total": 2.0,
  "total_attributes": 4.0,
  "average": 0.5
}
